[gd_scene load_steps=29 format=3 uid="uid://dklusmd30dlpp"]

[ext_resource type="Script" uid="uid://o3keabpsn702" path="res://Player/player_script.gd" id="1_btcbx"]
[ext_resource type="Texture2D" uid="uid://d4cu0ece211kf" path="res://assets/player/sprite-sheet.png" id="2_k53q1"]
[ext_resource type="PackedScene" uid="uid://niskdy2phprc" path="res://bow_and_arrow/bow.tscn" id="6_fhl08"]
[ext_resource type="PackedScene" uid="uid://ckxeiidnaa2ne" path="res://components/health_component.tscn" id="9_x3vf3"]
[ext_resource type="PackedScene" uid="uid://bv3bf3jmlol3s" path="res://components/hitbox_component.tscn" id="10_apopc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fhl08"]
atlas = ExtResource("2_k53q1")
region = Rect2(0, 140, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtle1"]
atlas = ExtResource("2_k53q1")
region = Rect2(20, 140, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_od3ui"]
atlas = ExtResource("2_k53q1")
region = Rect2(40, 140, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tjw"]
atlas = ExtResource("2_k53q1")
region = Rect2(60, 140, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3vf3"]
atlas = ExtResource("2_k53q1")
region = Rect2(60, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_apopc"]
atlas = ExtResource("2_k53q1")
region = Rect2(80, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_5htga"]
atlas = ExtResource("2_k53q1")
region = Rect2(0, 80, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o4e"]
atlas = ExtResource("2_k53q1")
region = Rect2(20, 80, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu6f8"]
atlas = ExtResource("2_k53q1")
region = Rect2(40, 80, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpta"]
atlas = ExtResource("2_k53q1")
region = Rect2(60, 80, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfmf2"]
atlas = ExtResource("2_k53q1")
region = Rect2(0, 120, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_pisgm"]
atlas = ExtResource("2_k53q1")
region = Rect2(20, 120, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ygp"]
atlas = ExtResource("2_k53q1")
region = Rect2(40, 120, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_o28un"]
atlas = ExtResource("2_k53q1")
region = Rect2(60, 120, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_n471f"]
atlas = ExtResource("2_k53q1")
region = Rect2(0, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_7emwf"]
atlas = ExtResource("2_k53q1")
region = Rect2(20, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_hshwv"]
atlas = ExtResource("2_k53q1")
region = Rect2(0, 60, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpjlu"]
atlas = ExtResource("2_k53q1")
region = Rect2(20, 60, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwp6"]
atlas = ExtResource("2_k53q1")
region = Rect2(40, 60, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_qemgg"]
atlas = ExtResource("2_k53q1")
region = Rect2(60, 60, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_k53q1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhl08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtle1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od3ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00tjw")
}],
"loop": false,
"name": &"back_hurt",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3vf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apopc")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5o4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu6f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpta")
}],
"loop": true,
"name": &"back_run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfmf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pisgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ygp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o28un")
}],
"loop": false,
"name": &"front_hurt",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n471f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7emwf")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hshwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpjlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mwp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qemgg")
}],
"loop": true,
"name": &"front_run",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ntmi"]
size = Vector2(0.590045, 9.1858835)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x3vf3"]
size = Vector2(2.82632, 3.871771)

[node name="Player" type="CharacterBody2D"]
position = Vector2(-1.1920929e-07, -1.9073486e-06)
scale = Vector2(2, 2)
platform_on_leave = 2
platform_floor_layers = 4294967040
script = ExtResource("1_btcbx")
max_health = 100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.02702725, -1.648648)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_k53q1")
animation = &"front_run"
autoplay = "front_idle"

[node name="main_body_shape" type="CollisionShape2D" parent="."]
position = Vector2(-0.02736044, 1.492053)
scale = Vector2(8.47393, 0.792673)
shape = SubResource("RectangleShape2D_4ntmi")

[node name="bow" parent="." instance=ExtResource("6_fhl08")]
position = Vector2(-1.6940273, -1.067567)
scale = Vector2(0.7, 0.7)

[node name="dashing_timer" type="Timer" parent="."]
wait_time = 0.3

[node name="dashing_cooldown" type="Timer" parent="."]
wait_time = 0.7

[node name="hitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("10_apopc")]
position = Vector2(-1.6940271, -2.1486478)
health_component = NodePath("../healthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxComponent"]
position = Vector2(1.6666669, 2.8243158)
scale = Vector2(2.35878, 2.41526)
shape = SubResource("RectangleShape2D_x3vf3")

[node name="healthComponent" parent="." instance=ExtResource("9_x3vf3")]
position = Vector2(-1.6940271, -2.1486478)
maxHealth = 10

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="dashing_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="dashing_cooldown" to="." method="_on_dashing_cooldown_timeout"]
